--- a/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
+++ b/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "array": "cpp",
         "string_view": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "bitset": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp"
     }
 }
