--- a/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
+++ b/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
@@ -5,6 +5,8 @@
         "ostream": "cpp",
         "bitset": "cpp",
         "initializer_list": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp"
     }
 }
