--- a/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
+++ b/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
@@ -8,6 +8,7 @@
         "utility": "cpp",
         "atomic": "cpp",
         "chrono": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ratio": "cpp"
     }
 }
