--- a/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
+++ b/matrix-calculator/matrix-calculator-b-main/.vscode/settings.json
@@ -9,6 +9,8 @@
         "atomic": "cpp",
         "chrono": "cpp",
         "iostream": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "iosfwd": "cpp",
+        "stdexcept": "cpp"
     }
 }
